# dist-space

./: .gitignore  Cargo.toml  README.md
client/: Cargo.toml
client/src/: main.rs  types.rs
common/: Cargo.toml  build.rs
common/proto/: space.proto  workspace.proto
common/src/: document.rs  error.rs  frame.rs  lib.rs  operation.rs  protocol.rs  types.rs  workspace.rs
common/src/proto/: workspace.rs
docs/: checkpoint_2_1_vfs.md  checkpoint_2_2_persistence.md  product.md  tasks.md
server/: Cargo.toml
server/src/: broadcaster.rs  client_entry.rs  main.rs  reader.rs  state.rs  transform.rs  writer.rs
test_client/: Cargo.toml
test_client/src/: main.rs
tests/src/: main.rs
workspace-root/: Cargo.toml
