[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
byteorder = "1.5.0"
tokio = { version = "1.48.0", features = ["full"] }
common = { path = "../common" }
crossbeam = "0.8.4"
uuid = {version = "1.18.1", features = ["v4"] }
prost = "0.14.1"

[dev-dependencies]
proptest = "1.6"
